<resources>
    <string name="app_name">ReportCard</string>
    <string name="report_card">Report Card</string>
    <string name="name_of_the_student">Name of the Student</string>
    <string name="student_name">Student\'s Name</string>
    <string name="physics">Physics</string>
    <string name="percentage">%age</string>
    <string name="chemistry">Chemistry</string>
    <string name="submit">Submit</string>
    <string name="mathematics">Mathematics</string>
    <string name="english">English</string>
    <string name="biology">Biology</string>
    <string name="result">Result</string>
</resources>
